<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  android:id="@+id/constraint"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingTop="@dimen/app_bar_padding"
  tools:context="deepdive.cnm.edu.temperatureconverter.MainActivity">

  <android.support.constraint.Guideline
  android:id="@+id/vertical_center_line"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"
  app:layout_constraintGuide_percent="0.5"/>

  <android.support.constraint.Guideline
    android:id="@+id/horizontal_center_line"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/fahrenheit_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/half_margin"
    android:layout_marginLeft="@dimen/half_margin"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/horizontal_center_line"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="@id/vertical_center_line">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/fahrenheit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/fahrenheit"
      android:inputType="number"/>

  </android.support.design.widget.TextInputLayout>


  <Button
    android:id="@+id/fahrenheit_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/fahrenheit_layout"
    app:layout_constraintLeft_toLeftOf="@id/constraint"
    app:layout_constraintRight_toRightOf="@id/vertical_center_line"
    android:text="@string/fahrenheit_to"/>

  <android.support.design.widget.TextInputLayout
    android:id="@+id/kelvin_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="48dp"
    android:layout_marginLeft="48dp"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toBottomOf="@id/horizontal_center_line"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/kelvin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/kelvin"
      android:inputType="number"/>

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/kelvin_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/kelvin_layout"
    app:layout_constraintLeft_toLeftOf="@id/constraint"
    app:layout_constraintRight_toRightOf="@id/constraint"
    android:text="@string/kelvin_to"/>


  <android.support.design.widget.TextInputLayout
    android:id="@+id/celcius_layout"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginRight="@dimen/half_margin"
    android:layout_marginLeft="@dimen/half_margin"
    app:hintEnabled="true"
    app:hintAnimationEnabled="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/horizontal_center_line"
    app:layout_constraintLeft_toLeftOf="@id/vertical_center_line"
    app:layout_constraintRight_toRightOf="parent">

    <android.support.design.widget.TextInputEditText
      android:id="@+id/celcius"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/celsius"
      android:inputType="number"/>

  </android.support.design.widget.TextInputLayout>

  <Button
    android:id="@+id/celcius_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/celcius_layout"
    app:layout_constraintLeft_toLeftOf="@id/vertical_center_line"
    app:layout_constraintRight_toRightOf="@id/constraint"
    android:text="@string/celcius_to"/>

</android.support.constraint.ConstraintLayout>
